--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,45 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link href="css/main.css" rel="stylesheet" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
-      <nav class="top-bar" data-topbar role="navigation">
-          <ul class="title-area">
-              <li class="name">
-                  <h1><a href="#">Farshad Ash</a></h1>
-              </li>
-              <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-              <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-          </ul>
-
-          <section class="top-bar-section">
-              <!-- Right Nav Section -->
-              <ul class="right">
-                  <li><a href="#">Right Button Active</a></li>
-                  <li class="has-dropdown">
-                      <a href="#">Right Button Dropdown</a>
-                      <ul class="dropdown">
-                          <li><a href="#">First link in dropdown</a></li>
-                          <li><a href="#">Active link in dropdown</a></li>
-                      </ul>
+      <div class="fixed">
+          <nav class="top-bar" data-topbar role="navigation">
+              <ul class="title-area">
+                  <li class="name">
+                      <h1><a href="#">Farshad Ash</a></h1>
                   </li>
+                  <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                  <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
               </ul>
 
-              <!-- Left Nav Section -->
-              <ul class="right">
-                  <li><a href="#">Left Nav Button</a></li>
-              </ul>
-          </section>
-      </nav>
+              <section class="top-bar-section">
+                  <!-- Right Nav Section -->
+                  <ul class="right">
+                      <li><a href="#home" class="smoothScroll">Home</a></li>
+                      <li><a href="#about" class="smoothScroll">About Me</a></li>
+                      <li><a href="#projects" class="smoothScroll">Projects</a></li>
+                      <li><a href="#services" class="smoothScroll">Services</a></li>    
+                      <li><a href="#contact" class="smoothScroll">Contact Me</a></li>              
+                  </ul>
+              </section>
+          </nav>
+      </div>
 
-      <section class="title-area text-center large-12">
+      <section class="title-area text-center large-12" id="home">
           <br />
-          <h1>Farshad Ash</h1>
+          <h1>Welcome to my site!</h1>
+          <img src="img/logo.jpg" />
+      </section>
+          
+      <section id="about">
+          Section 1
+      </section>
+
+      <section id="projects">
+          Section 2
+      </section>
+
+      <section id="services">
+          Section 3
+      </section>
+
+      <section id="contact">
+          Section 4
       </section>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
     <script>
       $(document).foundation();
     </script>
