Added sticky option to have menu scroll with user, added orbit image slider with 3 images, revamped css for spacing, added tracking for type of user.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,8 +9,9 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
-      <div class="fixed">
-          <nav class="top-bar" data-topbar role="navigation">
+
+      <div class="sticky">
+          <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
               <ul class="title-area">
                   <li class="name">
                       <h1><a href="#">Farshad Ash</a></h1>
@@ -25,8 +26,8 @@
                       <li><a href="#home" class="smoothScroll">Home</a></li>
                       <li><a href="#about" class="smoothScroll">About Me</a></li>
                       <li><a href="#projects" class="smoothScroll">Projects</a></li>
-                      <li><a href="#services" class="smoothScroll">Services</a></li>    
-                      <li><a href="#contact" class="smoothScroll">Contact Me</a></li>              
+                      <li><a href="#services" class="smoothScroll">Services</a></li>
+                      <li><a href="#contact" class="smoothScroll">Contact Me</a></li>
                   </ul>
               </section>
           </nav>
@@ -35,22 +36,55 @@
       <section class="title-area text-center large-12" id="home">
           <br />
           <h1>Welcome to my site!</h1>
-          <img src="img/logo.jpg" />
-      </section>
+          <strong class="show-for-large-up">Welcome Pc user!</strong>
+          <strong class="show-for-medium-only">Welcome tablet user!</strong>
+          <strong class="show-for-small-only">Welcome mobile user!</strong>
+          <br />
+              <img src="img/logo.jpg" />
+
+              <p class="large-6 large-offset-3 small-4 small-offset-4 text-center">
+                  <br />
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+                  Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+                  Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              </p>
+
+          <ul class="example-orbit" data-orbit>
+              <li>
+                  <img src="img/1.jpg" alt="slide 1" />
+                  <div class="orbit-caption text-center">
+                      Image 1.
+                  </div>
+              </li>
+              <li class="active">
+                  <img src="img/2.jpg" alt="slide 2" />
+                  <div class="orbit-caption text-center" >
+                      Image 2.
+                  </div>
+              </li>
+              <li>
+                  <img src="img/3.jpg" alt="slide 3" />
+                  <div class="orbit-caption">
+                      Caption Three.
+                  </div>
+              </li>
+          </ul>
+
+</section>
           
-      <section id="about">
+      <section id="about" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
           Section 1
       </section>
 
-      <section id="projects">
+      <section id="projects" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
           Section 2
       </section>
 
-      <section id="services">
+      <section id="services" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
           Section 3
       </section>
 
-      <section id="contact">
+      <section id="contact" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
           Section 4
       </section>
 
