Changed css rules for page sizes, added orbit slider and images.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,7 +11,7 @@
   <body>
 
       <div class="sticky">
-          <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
+          <nav class="top-bar" data-topbar role="navigation" data-options="scrolltop: false;">
               <ul class="title-area">
                   <li class="name">
                       <h1><a href="#">Farshad Ash</a></h1>
@@ -57,7 +57,7 @@
                   </div>
               </li>
               <li class="active">
-                  <img src="img/2.jpg" alt="slide 2" />
+                  <img src="http://placehold.it/1920x1200" alt="slide 2" />
                   <div class="orbit-caption text-center" >
                       Image 2.
                   </div>
@@ -70,29 +70,72 @@
               </li>
           </ul>
 
-</section>
-          
-      <section id="about" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
-          Section 1
-      </section>
+    </section>
 
-      <section id="projects" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
-          Section 2
-      </section>
+      <div class="row">
+          <section id="about" class="large-12 columns  text-center">
+              Section 1
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+          </section>
+      </div>
 
-      <section id="services" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
-          Section 3
-      </section>
+      <div class="row">
+          <section id="projects" class="large-12 columns  text-center">
+              Section 2
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+          </section>
+      </div>
+      <div class="row">
+          <section id="services" class="large-12 columns text-center">
+              Section 3
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+          </section>
+          </div>
+      <div class="row">
+          <section id="contact" class="large-12 columns text-center">
+              Section 4
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              v
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+          </section>
+          </div>
 
-      <section id="contact" class="large-6 large-offset-3 small-4 small-offset-4 text-center">
-          Section 4
-      </section>
-
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+          <script src="js/vendor/jquery.js"></script>
+          <script src="js/foundation.min.js"></script>
+          <script src="js/smoothscroll.js"></script>
+          <script>
+              $(document).foundation();
+          </script>
+</body>
 </html>
