Add titles, page breaks, and footer with extra space for enhanced scrolling.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Portfolio | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link href="css/main.css" rel="stylesheet" />
     <script src="js/vendor/modernizr.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>  
   </head>
   <body>
 
-      <div class="sticky">
+      <div class="sticky" id="topbar">
           <nav class="top-bar" data-topbar role="navigation" data-options="scrolltop: false;">
               <ul class="title-area">
                   <li class="name">
@@ -27,6 +28,7 @@
                       <li><a href="#about" class="smoothScroll">About Me</a></li>
                       <li><a href="#projects" class="smoothScroll">Projects</a></li>
                       <li><a href="#services" class="smoothScroll">Services</a></li>
+                      <li><a href="#github" class="smoothScroll">Github</a></li>
                       <li><a href="#contact" class="smoothScroll">Contact Me</a></li>
                   </ul>
               </section>
@@ -42,11 +44,13 @@
           <br />
               <img src="img/logo.jpg" />
 
-              <p class="large-6 large-offset-3 small-4 small-offset-4 text-center">
+              <p class="large-12 columns text-center">
                   <br />
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
                   Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
                   Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+                  <br />
+                  <br />
               </p>
 
           <ul class="example-orbit" data-orbit>
@@ -71,9 +75,12 @@
           </ul>
 
     </section>
-
+      <hr />
       <div class="row">
           <section id="about" class="large-12 columns  text-center">
+              <h3>About Me</h3>
+              <br />
+              <br />
               Section 1
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
               Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
@@ -86,9 +93,12 @@
               Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
           </section>
       </div>
-
+      <hr />
       <div class="row">
           <section id="projects" class="large-12 columns  text-center">
+              <h3>Projects</h3>
+              <br />
+              <br />
               Section 2
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
               Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
@@ -101,8 +111,12 @@
               Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
           </section>
       </div>
+      <hr />
       <div class="row">
           <section id="services" class="large-12 columns text-center">
+              <h3>Services</h3>
+              <br />
+              <br />
               Section 3
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
               Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
@@ -115,9 +129,31 @@
               Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
           </section>
           </div>
+      <hr />
+      <div class="row">
+          <section id="github" class="large-12 columns text-center">
+              <h3>GitHub</h3>
+              <br />
+              <br />
+              Section 4
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
+              Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
+              Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+          </section>
+      </div>
+      <hr />
       <div class="row">
           <section id="contact" class="large-12 columns text-center">
-              Section 4
+              <h3>Contact</h3>
+              <br />
+              <br />
+              Section 5
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
               Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
               Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
@@ -130,12 +166,16 @@
               Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
           </section>
           </div>
-
+      <hr />
+      <div id="footer" class="text-center">
+          <footer>&copy Farshad Ash. 2014</footer>
+      </div>
           <script src="js/vendor/jquery.js"></script>
           <script src="js/foundation.min.js"></script>
           <script src="js/smoothscroll.js"></script>
           <script>
               $(document).foundation();
           </script>
+
 </body>
 </html>
