--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,6 +8,10 @@
     <link href="css/main.css" rel="stylesheet" />
     <script src="js/vendor/modernizr.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
+
+    <script type="text/javascript">var switchTo5x = true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({ publisher: "fcbc3a88-2802-4b82-8617-bda2d87d901c", doNotHash: true, doNotCopy: true, hashAddressBar: false });</script>
 </head>
 <body>
     <!-- Start of Top Navigation Bar-->
@@ -61,21 +65,27 @@
         <!-- Orbit Slider-->
         <ul class="example-orbit" data-orbit>
             <li>
-                <img src="img/1.png" alt="slide 1" />
+                <a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/assignment2/login.php">
+                    <img src="img/1.png" alt="slide 1" />
+                </a>
                 <div class="orbit-caption text-center">
-                    Image 1.
-                </div>
-            </li>
-            <li class="active">
-                <img src="http://placehold.it/1920x1200" alt="slide 2" />
-                <div class="orbit-caption text-center">
-                    Image 2.
+                    Comp1006 Assignment 2.
                 </div>
             </li>
             <li>
-                <img src="img/3.jpg" alt="slide 3" />
+                <a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/final/stores.php?id=1">
+                    <img src="img/2.png" alt="slide 2" />
+                </a>
+                <div class="orbit-caption text-center">
+                    Comp1006 Final.
+                </div>
+            </li>
+            <li>
+                <a href="http://webdesign4.georgianc.on.ca/~200263939/htmlintro/gc/index">
+                    <img src="img/3.png" alt="slide 3" />
+                </a>
                 <div class="orbit-caption">
-                    Caption Three.
+                    HTML Intro Smartphone Site.
                 </div>
             </li>
         </ul>
@@ -88,18 +98,17 @@
     <div class="row">
         <section id="about" class="large-12 columns  text-center">
             <h3>About Me</h3>
-            <br />
-            <br />
-            Section 1
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+            <img src="img/me.jpg" />
+            <section>
+                <br />
+                My name is Farshad Ash, and I am a year 2 Computer Programmer Analyst student at Georgian College in Barrie, Ontario. I originally come from Iran and immigrated to Canada in 2002, where I lived in
+                Toronto until 2008 before moving to Barrie. I have been interested in the computer world ever since I was a child, as my father and cousins have all been working in the computer industry since then.
+                I am hoping to be able to get a career in this field later on in life in the networking security side, or game design. I currently work as a Line Cook at St.Louis Bar and Grill and am planning to (hopefully)
+                get a coop in the coming winter term for experience in the computer sciences.
+                <br />
+                <br />
+                <a href="img/resume.pdf">Resume</a>
+            </section>
         </section>
     </div>
 
@@ -112,16 +121,11 @@
             <h3>Projects</h3>
             <br />
             <br />
-            Section 2
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+            <ul class="clearing-thumbs large-block-grid-3" data-clearing>
+                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/assignment2/login.php"><img data-caption="Page" src="/img/1.png"></a></li>
+                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/final/stores.php?id=1"><img data-caption="caption 2 here..." src="/img/2.png"></a></li>
+                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/htmlintro/gc/index"><img data-caption="caption 3 here..." src="/img/3.png"></a></li>
+            </ul>
         </section>
     </div>
 
@@ -134,16 +138,17 @@
             <h3>Services</h3>
             <br />
             <br />
-            Section 3
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+            <h3 class="subheader">Computer Repair</h3>
+            <p>
+                Basic software and hardware repairs for computers. Have knowledge in both aspects of computer systems from courses taken in high school. Can help to speed up computer, install new software,
+                or install new hardware, including building a pc from scratch.
+            </p>
+            <br />
+            <h3 class="subheader">Web Design</h3>
+            <p>
+                Basic web design for responsive websites for commerical or personal use. Have basic knowledge of design from courses in both high school and college. Have knowledge of use with frameworks and Jquery/
+                Javascript.
+            </p>
         </section>
     </div>
 
@@ -156,16 +161,7 @@
             <h3>GitHub</h3>
             <br />
             <br />
-            Section 4
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+            If you'd like to view the source codes and assests used on this project, <a href="https://github.com/seyfarash/Assignment1">click here!</a>
         </section>
     </div>
 
@@ -178,17 +174,21 @@
             <h3>Contact</h3>
             <br />
             <br />
-            Section 5
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
-            v
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat ligula ligula. Mauris elementum aliquet odio vel auctor. Vestibulum eget lobortis turpis.
-            Duis eu arcu eu quam porta malesuada. Aenean accumsan, felis eu ultrices elementum, sem diam mollis eros, id viverra libero nibh eget nibh. Nam blandit elit ut ex dignissim condimentum.
-            Etiam finibus volutpat urna, vel hendrerit libero ultrices nec. Sed eget faucibus tellus.
+            <form id="contact_form" action="send.php" method="POST" enctype="multipart/form-data">
+                <div class="row">
+                    <label for="name">Your name:</label><br />
+                    <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+                </div>
+                <div class="row">
+                    <label for="email">Your email:</label><br />
+                    <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+                </div>
+                <div class="row">
+                    <label for="message">Your message:</label><br />
+                    <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+                </div>
+                <a role="button" aria-label="submit form" href="send.php" class="button">Submit</a>
+            </form>
         </section>
     </div>
 
@@ -198,14 +198,24 @@
     <!-- Footer Section-->
     <div id="footer" class="text-center">
         <footer>&copy Farshad Ash. 2014</footer>
-    </div>
+        <a href="https://twitter.com/farshadash" class="twitter-follow-button" data-show-count="false" data-size="large">
+            <img src="img/t1.png" height="100" width="100" />
+        </a>
+        <br />
+        <a href="https://facebook.com/farshad.ash" class="facebook-follow-button" data-show-count="false" data-size="large">
+            <img src="img/f1.png" height="100" width="100" />
+        </a>
+        <br />
 
-    <!-- Javascript imports and script initializers-->
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script>
-        $(document).foundation();
-    </script>
+
+
+
+        <!-- Javascript imports and script initializers-->
+        <script src="js/vendor/jquery.js"></script>
+        <script src="js/foundation.min.js"></script>
+        <script src="js/smoothscroll.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
 </body>
 </html>
