Fixed email system and added more to contact info.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -172,8 +172,19 @@
     <div class="row">
         <section id="contact" class="large-12 columns text-center">
             <h3>Contact</h3>
+
+            <h3 class="subheader">Info</h3>
+            <p>
+                Phone: (705)-795-5491
+                <br />
+                Address: 23 Mcintyre Dr
+                <br />
+                Email: Seyfarash@gmail.com
+                <br />
+            </p>
             <br />
             <br />
+
             <form id="contact_form" action="send.php" method="POST" enctype="multipart/form-data">
                 <div class="row">
                     <label for="name">Your name:</label><br />
