Added source comment.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -233,7 +233,7 @@
     <!-- Javascript script initializers-->
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
+    <script src="js/smoothscroll.js"></script> <!-- smoothScroll method from cferdinandi: https://github.com/cferdinandi/smooth-scroll#readme-->
     <script>
         $(document).foundation();
     </script>
