Fixed image links for server.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -130,9 +130,9 @@
             <br />
             <br />
             <ul class="clearing-thumbs large-block-grid-3" data-clearing>
-                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/assignment2/login.php"><img data-caption="Page 1" src="/img/1.png"></a></li>
-                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/final/stores.php?id=1"><img data-caption="Page 2" src="/img/2.png"></a></li>
-                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/htmlintro/gc/index"><img data-caption="Page 3" src="/img/3.png"></a></li>
+                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/assignment2/login.php"><img data-caption="Page 1" src="img/1.png"></a></li>
+                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/comp1006/final/stores.php?id=1"><img data-caption="Page 2" src="img/2.png"></a></li>
+                <li><a href="http://webdesign4.georgianc.on.ca/~200263939/htmlintro/gc/index"><img data-caption="Page 3" src="img/3.png"></a></li>
             </ul>
         </section>
     </div>
